--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -29,7 +29,7 @@ jobs:
         docker build --no-cache \
           -t ghcr.io/${{ github.repository_owner }}/devsecops-app:$VERSION \
           -t ghcr.io/${{ github.repository_owner }}/devsecops-app:latest \
-          -f app/Dockerfile app/
+          -f app/Dockerfile .
 
     - name: Scan Image with Trivy
       uses: aquasecurity/trivy-action@0.20.0
